# mai

./: .gitignore  Cargo.toml
config/: Cargo.toml
config/src/: config.rs  lib.rs
configs/: config.yml
migrations/: 20240321143304_init_table.down.sql  20240321143304_init_table.up.sql
